--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.10.0
 cffi==2.0.0
 cryptography==46.0.3
 Django==5.2.7
+gunicorn==23.0.0
+packaging==25.0
 pillow==12.0.0
 pycparser==2.23
 PyMySQL==1.1.2
